[gd_scene load_steps=2 format=3 uid="uid://inventory_slot"]

[ext_resource type="Script" path="res://src/ui/inventory_slot.gd" id="1_slot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.2, 0.2, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)

[node name="InventorySlot" type="PanelContainer"]
layout_mode = 2
script = ExtResource("1_slot")
slot_size = 64
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
visible = false

[node name="PlaceholderRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
visible = false

[node name="QuantityLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
offset_left = 40.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "0"
horizontal_alignment = 2
vertical_alignment = 2
visible = false

[node name="EmptyLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 0.5)
text = ""
horizontal_alignment = 1
vertical_alignment = 1
